add family booking front end

--- a/view/css/style.css
+++ b/view/css/style.css
@@ -34,3 +34,17 @@ footer{
     
 }
 
+fieldset {
+    width: 300px;         
+    padding: 1em;
+  }
+  
+  legend {
+    font-weight: bold;    
+    text-align: center;  
+  }
+
+
+  
+
+
