add family bookinhg link to index

--- a/view/index.html
+++ b/view/index.html
@@ -93,7 +93,7 @@
                         <h5 class="card-title">Family</h5>
                         <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet minus ullam a laboriosam error, similique exercitationem nobis maxime voluptatem, quasi, odit illo necessitatibus sint nam sapiente? Excepturi dolores temporibus nemo!</p>
                     </div>
-                    <a href="#" class="btn mt-auto align-self-center custom-btn">Go somewhere</a>
+                    <a href="family.html" class="btn mt-auto align-self-center custom-btn">Go somewhere</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -129,6 +129,6 @@
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
         </a>
-    </footer>
+      </footer>
 </body>
 </html>
